# Advanced-Programming-Project

./: AIPlayer.cpp  AIPlayer.h  AlPlayer.cpp  AlPlayer.h  Board.cpp  Board.h  CMakeLists.txt  ConsoleBoard.cpp  ConsoleBoard.h  GameLogic.h  HumanLocalPlayer.cpp  HumanLocalPlayer.h  Menu.cpp  Menu.h  Player.h  Point.cpp  Point.h  ReversiGame.cpp  ReversiGame.h  StandardGameLogic.cpp  StandardGameLogic.h  main.cpp
Client/: AIPlayer.cpp  AIPlayer.h  Board.cpp  Board.h  CMakeLists.txt  Client.cpp  Client.h  CommandMenu.cpp  CommandMenu.h  ConnectToServer.cpp  ConnectToServer.h  ConsoleBoard.cpp  ConsoleDisplay.cpp  ConsoleDisplay.h  ConsoleInterface.cpp  ConsoleInterface.h  Display.h  GameLogic.h  HumanLocalPlayer.cpp  HumanLocalPlayer.h  Menu.cpp  Menu.h  Player.h  Point.cpp  Point.h  ReadDefiniationFile.cpp  ReadDefiniationFile.h  ReadDefinitionFile.cpp  ReadDefinitionFile.h  RemotePlayer.cpp  RemotePlayer.h  ReversiGame.cpp  ReversiGame.h  StandardGameLogic.cpp  StandardGameLogic.h  UserInterface.h  clientDefinitionFile.txt  log.txt  main.cpp
Client/lib/googletest-release-1.8.0/googlemock/scripts/: gmock-config.in
Client/lib/googletest-release-1.8.0/googlemock/scripts/generator/: LICENSE
Client/lib/googletest-release-1.8.0/googletest/scripts/: gtest-config.in
Client/test/: AIPlayerTest.cpp  BoardTest.cpp  BoardTest.h  ConsoleBoardTest.h  ReadDefinitionFileTest.cpp  StandardGameLogicTest.cpp  fileTest1.txt  fileTest2.txt  gtest_main.cpp
Server/: CMakeLists.txt  CloseCommand.cpp  CloseCommand.h  Command.cpp  Command.h  CommandsManager.cpp  CommandsManager.h  Game.cpp  Game.h  GameListManager.cpp  GameListManager.h  GameManager.cpp  GameManager.h  JoinCommand.cpp  JoinCommand.h  ListGamesCommand.cpp  ListGamesCommand.h  PlayCommand.cpp  PlayCommand.h  ReadDefinitionFile.cpp  ReadDefinitionFile.h  Server.cpp  Server.h  ServerDataManager.cpp  ServerDataManager.h  StartCommand.cpp  StartCommand.h  Task.h  ThreadPool.cpp  ThreadPool.h  main.cpp  serverDefinitionFile.txt
test/: AIPlayerTest.cpp  ConsoleBoardTest.cpp  ConsoleBoardTest.h  PointTest.cpp  PointTest.h  StandardGameLogicTest.cpp  StandardGameLogicTest.h  gtestMain.cpp  gtest_main.cpp
